se arreglo vh pag nosotros

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <nav class="container navbar navbar-expand-lg header-nav">
             <div class="container-fluid d-flex justify-content-evenly ">
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="/index.html">
                     <h1 class="links">GamingHouse</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -41,16 +41,16 @@
                 <div class="collapse navbar-collapse d-lg-flex justify-content-lg-evenly navegador" id="navbarNav">
                     <ul class="navbar-nav text-center navegador">
                         <li class="nav-item">
-                            <a class="links" aria-current="page" href="./monitores.html">Monitores</a>
+                            <a class="links" aria-current="page" href="/pages/monitores.html">Monitores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="links" href="./televisores.html">Televisores</a>
+                            <a class="links" href="/pages/televisores.html">Televisores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="links" href="./nuestraempresa.html">Quienes somos</a>
+                            <a class="links" href="/pages/nuestraempresa.html">Quienes somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="links" href="./contacto.html">Contacto</a>
+                            <a class="links" href="/pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
