--- a/pages/televisores.html
+++ b/pages/televisores.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,24 +25,26 @@
 
         <nav class="container navbar navbar-expand-lg header-nav">
             <div class="container-fluid d-flex justify-content-evenly ">
-                <a class="navbar-brand" href="./index.html"><h1 class="links">GamingHouse</h1></a>
+                <a class="navbar-brand" href="/index.html">
+                    <h1 class="links">GamingHouse</h1>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse d-lg-flex justify-content-lg-evenly navegador"  id="navbarNav">
+                <div class="collapse navbar-collapse d-lg-flex justify-content-lg-evenly navegador" id="navbarNav">
                     <ul class="navbar-nav text-center navegador">
                         <li class="nav-item">
-                            <a class=" links" aria-current="page" href="./monitores.html">Monitores</a>
+                            <a class="links" aria-current="page" href="/pages/monitores.html">Monitores</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" links" href="./televisores.html">Televisores</a>
+                            <a class="links" href="/pages/televisores.html">Televisores</a>
                         </li>
                         <li class="nav-item">
-                            <a class=" links" href="./nuestraempresa.html">Quienes somos</a>
+                            <a class="links" href="/pages/nuestraempresa.html">Quienes somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="links" href="./contacto.html">Contacto</a>
+                            <a class="links" href="/pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -134,16 +136,16 @@
 
     <section class="sponsor mb-3 d-none d-md-block">
         <div class=" d-none square slider d-md-flex flex-row align-content-center justify-content-between">
-            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/redragon.png"
+            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="/assets/redragon.png"
                     alt="logo de redragon"></a>
-            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/samsung.jpg"
-                    alt="logo de redragon"></a>
-            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/lg.png"
-                    alt="logo de redragon"></a>
-            <a href="https://redragon.es/" target="_blank"> <img class="h-100" src="./assets/bgh.png"
-                    alt="logo de redragon"></a>
-           
-            
+            <a href="https://www.samsung.com/ar/" target="_blank"> <img class="h-100" src="/assets/samsung.jpg"
+                    alt="logo de samsung"></a>
+            <a href="https://www.lg.com/ar" target="_blank"> <img class="h-100" src="/assets/lg.png"
+                    alt="logo de lg"></a>
+            <a href="https://bgh.com.ar/" target="_blank"> <img class="h-100" src="/assets/bgh.png"
+                    alt="logo de bgh"></a>
+
+
         </div>
 
     </section>
