se subieron las imagenes

--- a/index.html
+++ b/index.html
@@ -75,57 +75,56 @@
 
             <div class="row col-12">
 
-                <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators d-none d-md-block text-center">
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"
                             aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
 
 
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="./assets/tv1.jpg" class="d-block w-50 rounded mx-auto"
-                                alt="tv 50 pulgadas">
+                            <img src="./assets/tv1.webp" class="d-block w-50 rounded mx-auto" alt="tv 50 pulgadas">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
+                                <h3>Televisor</h3>
                                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                                 <p>Precio: 299.999</p>
                                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./assets/monitorodyssey.png" class="d-block w-50 rounded mx-auto"
+                            <img src="./assets/monitor12.png" class="d-block w-50 rounded mx-auto"
                                 alt="monitor gamer 24 pulgadas">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                                <article>50" Neo QLED 4K QN90B TV Gaming</article>
-                                <p>Precio: 299.999</p>
+                                <h3>Monitor</h3>
+                                <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
+                                <p>Precio: 70.000</p>
                                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/tv6.jpg" class="d-block  w-50 rounded mx-auto"
-                                alt="tv 43 pulgadas">
+                            <img src="./assets/tv6.jpg" class="d-block  w-50 rounded mx-auto" alt="tv 43 pulgadas">
                             <div
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
-                                <article>50" Neo QLED 4K QN90B TV Gaming</article>
-                                <p>Precio: 299.999</p>
+                                <h3>Televisor</h3>
+                                <article>Smart TV LED Full HD 43" BGH ANDROID</article>
+                                <p>Precio: 99.999</p>
                                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                        data-bs-slide="prev">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                        data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
@@ -162,8 +161,7 @@
     <!-- Comienzo del footer-->
     <footer>
 
-
-
+        
         <section class="ubicacion">
             <p>Nos encontramos en:</p>
 
