--- a/pages/monitores.html
+++ b/pages/monitores.html
@@ -77,68 +77,51 @@
                 </div>
 
                 <div class="tarjeta">
-                    <img class="monitor" src="" alt="">
-                    <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                    <p>Precio: 299.999</p>
+                    <img class="monitor2" src="" alt="">
+                    <article>Monitor LED Full HD de 22"</article>
+                    <p>Precio: 24.999</p>
                     <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
 
                 </div>
                 <div class="tarjeta">
-                    <img class="monitor" src="" alt="">
-                    <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                    <p>Precio: 299.999</p>
+                    <img class="monitor3" src="" alt="">
+                    <article>Monitor Gaming 27" FHD 240Hz con panel IPS</article>
+                    <p>Precio: 127.000</p>
                     <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
 
                 </div>
                 <div class="tarjeta">
-                    <img class="monitor" src="" alt="">
-                    <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                    <p>Precio: 299.999</p>
+                    <img class="monitor4" src="" alt="">
+                    <article>Monitor gamer Redragon Jade led 27"</article>
+                    <p>Precio: 96.999</p>
                     <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
 
                 </div>
                 <div class="tarjeta">
-                    <img class="monitor" src="" alt="">
-                    <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                    <p>Precio: 299.999</p>
+                    <img class="monitor5" src="" alt="">
+                    <article> Monitor gamer Samsung led 24"</article>
+                    <p>Precio: 25.999</p>
                     <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
 
                 </div>
                 <div class="tarjeta">
-                    <img class="monitor" src="" alt="">
-                    <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                    <p>Precio: 299.999</p>
+                    <img class="monitor6" src="" alt="">
+                    <article>Monitor Gaming Odyssey G3 24" FHD 165hz</article>
+                    <p>Precio: 149.999</p>
                     <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
 
                 </div>
-                <div class="tarjeta">
-                    <img class="monitor" src="" alt="">
-                    <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                    <p>Precio: 299.999</p>
-                    <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
-
-
-
-                </div>
-                <div class="tarjeta">
-                    <img class="monitor" src="" alt="">
-                    <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                    <p>Precio: 299.999</p>
-                    <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
-
-
-
-                </div>
+                
             </section>
 
         </section>
