se agregaron precios

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
                                 <h3>Televisor</h3>
                                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
-                                <p>Precio: 299.999</p>
+                                <p>Precio: $299.999</p>
                                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
                             </div>
                         </div>
@@ -104,7 +104,7 @@
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
                                 <h3>Monitor</h3>
                                 <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
-                                <p>Precio: 70.000</p>
+                                <p>Precio: $70.000</p>
                                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                                 class="carousel-caption d-none d-md-flex position-relative w-75 justify-content-center flex-column">
                                 <h3>Televisor</h3>
                                 <article>Smart TV LED Full HD 43" BGH ANDROID</article>
-                                <p>Precio: 99.999</p>
+                                <p>Precio: $99.999</p>
                                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
                             </div>
