--- a/pages/televisores.html
+++ b/pages/televisores.html
@@ -66,7 +66,7 @@
             <div class="tarjeta">
                 <img class="televisor1" alt="">
                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
-                <p>Precio: 299.999</p>
+                <p>Precio: $299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
@@ -76,7 +76,7 @@
             <div class="tarjeta">
                 <img class="televisor2" alt="">
                 <article>Smart TV LED Full HD 43" BGH ANDROID</article>
-                <p>Precio: 99.999</p>
+                <p>Precio: $99.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
@@ -85,7 +85,7 @@
             <div class="tarjeta">
                 <img class="televisor3" alt="">
                 <article>32" HD Smart TV T4300</article>
-                <p>Precio: 66.999</p>
+                <p>Precio: $66.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
@@ -94,7 +94,7 @@
             <div class="tarjeta">
                 <img class="televisor4" alt="">
                 <article>75" Neo QLED 8K Smart TV</article>
-                <p>Precio: 1.299.999</p>
+                <p>Precio: $1.299.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
@@ -103,7 +103,7 @@
             <div class="tarjeta">
                 <img class="televisor5" alt="">
                 <article>LG OLED evo C2 Smart TV 4K de 77"</article>
-                <p>Precio: 399.999</p>
+                <p>Precio: $399.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
@@ -112,7 +112,7 @@
             <div class="tarjeta">
                 <img class="televisor6" alt="">
                 <article>LG Smart TV AI FHD 43"</article>
-                <p>Precio: 79.999</p>
+                <p>Precio: $79.999</p>
                 <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
 
 
