se elimino etiqueta br

--- a/pages/nuestraempresa.html
+++ b/pages/nuestraempresa.html
@@ -60,18 +60,18 @@
     <Main>
 
         <section class="nosotros container shadow-lg my-3">
-            <div>
+           
 
                 <h5 class="nosotros-tittle">¿Quienes somos?</h5>
 
-                <p class="nosotros-parrafo">Somos Gaminghouse,un emprendimiento dedicado a la venta de TVs smarts y monitores
-                    gaming.
-                    <br> Tenemos como objetivo brindar la mejor atención y los mejores precios del mercado y para ello
+                <p>Somos Gaminghouse,un emprendimiento dedicado a la venta de TVs smarts y monitores
+                    gaming.</p>
+                    <p>Tenemos como objetivo brindar la mejor atención y los mejores precios del mercado y para ello
                     buscamos la satisfacción en el servicio que brindamos para
                     ganarnos las confianza de nuestros clientes.
                 </p>
 
-            </div>
+            
 
 
 
