--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <h3>Televisor</h3>
                                 <article>50" Neo QLED 4K QN90B TV Gaming</article>
                                 <p>Precio: $299.999</p>
-                                <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
+                                <p> <a class="comprar" href="./pages/contacto.html">Agregar al carrito</a> </p>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
@@ -105,7 +105,7 @@
                                 <h3>Monitor</h3>
                                 <article>Monitor Gaming 24" FHD 144Hz Curvo</article>
                                 <p>Precio: $70.000</p>
-                                <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
+                                <p> <a class="comprar" href="./pages/contacto.html">Agregar al carrito</a> </p>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -115,7 +115,7 @@
                                 <h3>Televisor</h3>
                                 <article>Smart TV LED Full HD 43" BGH ANDROID</article>
                                 <p>Precio: $99.999</p>
-                                <p> <a class="comprar" href="./contacto.html">Agregar al carrito</a> </p>
+                                <p> <a class="comprar" href="./pages/contacto.html">Agregar al carrito</a> </p>
 
                             </div>
                         </div>
